--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,16 +17,14 @@ nav {
   margin: 10px auto 80px;
   padding: 10px 0;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: flex-end;
   border-bottom: 1px solid #ddd;
 }
 nav a {
   margin-left: 12px;
 }
-nav .logo {
-  margin-right: auto;
-}
+
 footer {
   display: block;
   text-align: center;
